Implement math categories, Rational and Duration

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,13 +7,15 @@ kotlin = "2.1.10"
 kotlinxDatetime = "0.6.2"
 kotlinxSerializationJSON = "1.8.0"
 kotlinxCoroutines = "1.10.1"
+kotest = "5.9.1"
 
 [libraries]
 kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinxSerialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJSON" }
 kotlinxCoroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
-kotest = { module = "io.kotest:kotest-runner-junit5", version = "5.9.1"}
+kotest = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest"}
+kotestProperty = { module = "io.kotest:kotest-property", version.ref = "kotest"}
 
 # Libraries can be bundled together for easier import
 [bundles]
